--- a/com.github.varnholt.dynablaster_revenge.desktop
+++ b/com.github.varnholt.dynablaster_revenge.desktop
@@ -2,7 +2,7 @@
 Name=Dynablaster Revenge
 Comment=Remake of the game Dynablaster
 Icon=com.github.varnholt.dynablaster_revenge
-Exec=dynablaster
+Exec=dynablaster.sh
 Terminal=false
 Type=Application
 Categories=Game;ArcadeGame;
